// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Pagination examples PaginationDefaultFirstPageComponent should render correctly 1`] = `
<div
  id="root0"
>
  <nav
    aria-label="default pagination with first page selected"
    role="navigation"
  >
    <ul
      class="v-align-items-center v-flex v-flex-row v-gap-4 v-pagination"
      v-pagination=""
      valignitemscenter=""
      vflex=""
      vflexrow=""
      vgap="4"
    >
      <li>
        <button
          aria-disabled="true"
          aria-label="First page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled="disabled"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-arrow-start v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-0"
            v-icon-visa-arrow-start-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <rect
              height="1"
              transform="translate(7 7.00049)"
              width="1"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2 15.0002V1.00024H4L4 15.0002H2ZM6 8.00025L12.6069 1.00024L14 2.47622L8.78617 8.00025L14 13.5243L12.6069 15.0002L6 8.00025Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-disabled="true"
          aria-label="Previous page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled="disabled"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-left v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-1"
            v-icon-visa-chevron-left-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M10.6069 1.00049L12 2.47646L6.78617 8.00049L12 13.5245L10.6069 15.0005L4 8.00049L10.6069 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="page"
          aria-label="Page 1"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           1 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 2"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           2 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 3"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           3 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 4"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           4 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 5"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           5 
        </button>
      </li>
      
      
      <li
        class="v-align-items-center v-flex v-flex-row v-pagination-overflow"
        v-pagination-overflow=""
        valignitemscenter=""
        vflex=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-option-horizontal v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v-icon-4"
          v-icon-visa-option-horizontal-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5C2.32843 6.5 3 7.17157 3 8ZM9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5C8.82843 6.5 9.5 7.17157 9.5 8ZM14.5 9.5C15.3284 9.5 16 8.82843 16 8C16 7.17157 15.3284 6.5 14.5 6.5C13.6716 6.5 13 7.17157 13 8C13 8.82843 13.6716 9.5 14.5 9.5Z"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 100"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           100 
        </button>
      </li>
      
      
      
      <li>
        <button
          aria-label="Next page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-2"
            v-icon-visa-chevron-right-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Last page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-arrow-end v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-3"
            v-icon-visa-arrow-end-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <rect
              height="1"
              transform="translate(8 7.00049)"
              width="1"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2 2.47622L7.20919 8.00024L2 13.5243L3.3954 15.0002L10 8.00024L3.3954 1.00024L2 2.47622ZM12 1.00024H14L14 15.0002H12L12 1.00024Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination examples PaginationDefaultLastPageComponent should render correctly 1`] = `
<div
  id="root1"
>
  <nav
    aria-label="default pagination with last page selected"
    role="navigation"
  >
    <ul
      class="v-align-items-center v-flex v-flex-row v-gap-4 v-pagination"
      v-pagination=""
      valignitemscenter=""
      vflex=""
      vflexrow=""
      vgap="4"
    >
      <li>
        <button
          aria-label="First page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-arrow-start v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-5"
            v-icon-visa-arrow-start-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <rect
              height="1"
              transform="translate(7 7.00049)"
              width="1"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2 15.0002V1.00024H4L4 15.0002H2ZM6 8.00025L12.6069 1.00024L14 2.47622L8.78617 8.00025L14 13.5243L12.6069 15.0002L6 8.00025Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Previous page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-left v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-6"
            v-icon-visa-chevron-left-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M10.6069 1.00049L12 2.47646L6.78617 8.00049L12 13.5245L10.6069 15.0005L4 8.00049L10.6069 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          aria-label="Page 1"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           1 
        </button>
      </li>
      
      
      <li
        class="v-align-items-center v-flex v-flex-row v-pagination-overflow"
        v-pagination-overflow=""
        valignitemscenter=""
        vflex=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-option-horizontal v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v-icon-9"
          v-icon-visa-option-horizontal-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5C2.32843 6.5 3 7.17157 3 8ZM9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5C8.82843 6.5 9.5 7.17157 9.5 8ZM14.5 9.5C15.3284 9.5 16 8.82843 16 8C16 7.17157 15.3284 6.5 14.5 6.5C13.6716 6.5 13 7.17157 13 8C13 8.82843 13.6716 9.5 14.5 9.5Z"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 96"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           96 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 97"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           97 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 98"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           98 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 99"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           99 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="page"
          aria-label="Page 100"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           100 
        </button>
      </li>
      
      
      
      <li>
        <button
          aria-disabled="true"
          aria-label="Next page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled="disabled"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-7"
            v-icon-visa-chevron-right-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-disabled="true"
          aria-label="Last page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled="disabled"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-arrow-end v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-8"
            v-icon-visa-arrow-end-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <rect
              height="1"
              transform="translate(8 7.00049)"
              width="1"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2 2.47622L7.20919 8.00024L2 13.5243L3.3954 15.0002L10 8.00024L3.3954 1.00024L2 2.47622ZM12 1.00024H14L14 15.0002H12L12 1.00024Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination examples PaginationDefaultMiddlePageComponent should render correctly 1`] = `
<div
  id="root2"
>
  <nav
    aria-label="default pagination with middle page selected"
    role="navigation"
  >
    <ul
      class="v-align-items-center v-flex v-flex-row v-gap-4 v-pagination"
      v-pagination=""
      valignitemscenter=""
      vflex=""
      vflexrow=""
      vgap="4"
    >
      <li>
        <button
          aria-label="First page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-arrow-start v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-10"
            v-icon-visa-arrow-start-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <rect
              height="1"
              transform="translate(7 7.00049)"
              width="1"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2 15.0002V1.00024H4L4 15.0002H2ZM6 8.00025L12.6069 1.00024L14 2.47622L8.78617 8.00025L14 13.5243L12.6069 15.0002L6 8.00025Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Previous page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-left v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-11"
            v-icon-visa-chevron-left-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M10.6069 1.00049L12 2.47646L6.78617 8.00049L12 13.5245L10.6069 15.0005L4 8.00049L10.6069 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          aria-label="Page 1"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           1 
        </button>
      </li>
      
      
      <li
        class="v-align-items-center v-flex v-flex-row v-pagination-overflow"
        v-pagination-overflow=""
        valignitemscenter=""
        vflex=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-option-horizontal v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v-icon-14"
          v-icon-visa-option-horizontal-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5C2.32843 6.5 3 7.17157 3 8ZM9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5C8.82843 6.5 9.5 7.17157 9.5 8ZM14.5 9.5C15.3284 9.5 16 8.82843 16 8C16 7.17157 15.3284 6.5 14.5 6.5C13.6716 6.5 13 7.17157 13 8C13 8.82843 13.6716 9.5 14.5 9.5Z"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 4"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           4 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="page"
          aria-label="Page 5"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           5 
        </button>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 6"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           6 
        </button>
      </li>
      
      
      <li
        class="v-align-items-center v-flex v-flex-row v-pagination-overflow"
        v-pagination-overflow=""
        valignitemscenter=""
        vflex=""
      >
        <svg
          aria-hidden="true"
          class="v-icon v-icon-option-horizontal v-icon-tiny v-icon-visa"
          focusable="false"
          height="16"
          id="a-v-icon-15"
          v-icon-visa-option-horizontal-tiny=""
          viewBox="0 0 16 16"
          width="16"
        >
          <path
            class="v-icon-primary"
            clip-rule="evenodd"
            d="M3 8C3 8.82843 2.32843 9.5 1.5 9.5C0.671573 9.5 0 8.82843 0 8C0 7.17157 0.671573 6.5 1.5 6.5C2.32843 6.5 3 7.17157 3 8ZM9.5 8C9.5 8.82843 8.82843 9.5 8 9.5C7.17157 9.5 6.5 8.82843 6.5 8C6.5 7.17157 7.17157 6.5 8 6.5C8.82843 6.5 9.5 7.17157 9.5 8ZM14.5 9.5C15.3284 9.5 16 8.82843 16 8C16 7.17157 15.3284 6.5 14.5 6.5C13.6716 6.5 13 7.17157 13 8C13 8.82843 13.6716 9.5 14.5 9.5Z"
            fill-rule="evenodd"
          />
        </svg>
      </li>
      
      
      <li>
        <button
          aria-current="false"
          aria-label="Page 100"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           100 
        </button>
      </li>
      
      
      
      <li>
        <button
          aria-label="Next page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-12"
            v-icon-visa-chevron-right-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-label="Last page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-arrow-end v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-13"
            v-icon-visa-arrow-end-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <rect
              height="1"
              transform="translate(8 7.00049)"
              width="1"
            />
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M2 2.47622L7.20919 8.00024L2 13.5243L3.3954 15.0002L10 8.00024L3.3954 1.00024L2 2.47622ZM12 1.00024H14L14 15.0002H12L12 1.00024Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination examples PaginationSlimComponent should render correctly 1`] = `
<div
  id="root5"
>
  <nav
    aria-label="slim pagination"
    role="navigation"
  >
    <ul
      class="v-align-items-center v-flex v-flex-row v-pagination"
      v-pagination=""
      valignitemscenter=""
      vflex=""
      vflexrow=""
    >
      <li>
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled="disabled"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-left v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-29"
            v-icon-visa-chevron-left-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M10.6069 1.00049L12 2.47646L6.78617 8.00049L12 13.5245L10.6069 15.0005L4 8.00049L10.6069 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="page"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           1 
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           2 
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           3 
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           4 
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           5 
        </button>
      </li>
      
      <li>
        <button
          aria-label="Go to next page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-30"
            v-icon-visa-chevron-right-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;

exports[`Pagination examples PaginationSlimWithCountComponent should render correctly 1`] = `
<div
  id="root4"
>
  <nav
    aria-label="slim pagination with custom methods"
    role="navigation"
  >
    <ul
      class="v-align-items-center v-flex v-flex-row v-gap-4 v-pagination"
      v-pagination=""
      valignitemscenter=""
      vflex=""
      vflexrow=""
      vgap="4"
    >
      <li>
        <span>
          1 - 5 of 15
        </span>
      </li>
      <li>
        <button
          aria-disabled="true"
          aria-label="Go to previous page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          disabled="disabled"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-left v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-27"
            v-icon-visa-chevron-left-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M10.6069 1.00049L12 2.47646L6.78617 8.00049L12 13.5245L10.6069 15.0005L4 8.00049L10.6069 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
      <li>
        <button
          aria-current="page"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           1 
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           2 
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           3 
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           4 
        </button>
      </li>
      <li>
        <button
          aria-current="false"
          buttoncolor="tertiary"
          class="v-button v-button-tertiary"
          type="button"
          v-button=""
        >
           5 
        </button>
      </li>
      
      <li>
        <button
          aria-label="Go to next page"
          buttoncolor="tertiary"
          buttonsize="small"
          class="v-button v-button-small v-button-tertiary v-button-icon"
          type="button"
          v-button-icon=""
        >
          <svg
            aria-hidden="true"
            class="v-icon v-icon-chevron-right v-icon-tiny v-icon-visa"
            focusable="false"
            height="16"
            id="a-v-icon-28"
            v-icon-visa-chevron-right-tiny=""
            viewBox="0 0 16 16"
            width="16"
          >
            <path
              class="v-icon-primary"
              clip-rule="evenodd"
              d="M5.39309 1.00049L12 8.00049L5.39309 15.0005L4 13.5245L9.21383 8.00049L4 2.47646L5.39309 1.00049Z"
              fill-rule="evenodd"
            />
          </svg>
        </button>
      </li>
    </ul>
  </nav>
</div>
`;
